--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
     "@hookform/resolvers": "^3.3.3",
+    "@huggingface/transformers": "^3.2.4",
+    "@pinecone-database/pinecone": "^4.1.0",
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -30,6 +32,7 @@
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.2.1",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
@@ -48,6 +51,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.7",
