--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.2.1",
+    "node-loader": "^2.0.0",
     "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
