--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
     "@hookform/resolvers": "^3.3.3",
+    "@huggingface/inference": "^2.8.1",
     "@pinecone-database/pinecone": "^4.1.0",
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-avatar": "^1.0.4",
