--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "groq-sdk": "^0.12.0",
     "lucide-react": "^0.379.0",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.4",
